# care-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.cody/project/plan/: discovery.md  plan.md  prd.md  workflow_diagram.mmd
.cody/project/plan/old/: plan_backup_20251016_074520.md  plan_backup_20251017_145513.md  prd_backup_20251017_145513.md
app/: __init__.py  main.py
app/api/: __init__.py  chat.py  graph.py  sessions.py
app/data/: README.md  __init__.py  claims_data.json  loader.py  user_profiles.json
app/graph/: __init__.py  edges.py  graph.py  nodes.py  state.py
app/tools/: __init__.py  benefits.py  claims.py  coverage.py
data/: insurance_plans.json
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/graph/: page.tsx
frontend/components/: ErrorBoundary.tsx
frontend/components/chat/: ChatHeader.tsx  ChatWindow.tsx  LoadingIndicator.tsx  MessageInput.tsx  MessageList.tsx  ThinkingIndicator.tsx
frontend/components/developer/: DeveloperPanel.tsx  StateView.tsx  TraceView.tsx
frontend/components/observability/: DraggableGraphWindow.tsx  DraggableMemoryWindow.tsx  DraggableStepsWindow.tsx  ExecutionStepsContent.tsx  GraphContent.tsx  MemoryContent.tsx
frontend/lib/: api.ts  types.ts
tests/: test_agent.py  test_ollama.py
